--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -16,7 +16,21 @@
     shell:SystemTray.IsVisible="True" SupportedOrientations="Portrait" Orientation="Portrait">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
-
+    <phone:PhoneApplicationPage.Resources>
+        <shell:ApplicationBar x:Key="thread" IsVisible="True">
+            <shell:ApplicationBarIconButton x:Name="reply" IconUri="/Images/reply.png" Text="回复" Click="reply_click" />
+            <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
+            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem Text="进入该板块" Click="Enter_Click" />
+            </shell:ApplicationBar.MenuItems>
+        </shell:ApplicationBar>
+        <shell:ApplicationBar x:Key="reply" IsVisible="True">
+            <shell:ApplicationBarIconButton x:Name="post" IconUri="/Images/post.png" Text="提交" Click="post_click" />
+            <shell:ApplicationBarIconButton x:Name="cancel" IconUri="/Images/cancel.png" Text="取消" Click="cancel_Click" />
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.Resources>
+    
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -76,19 +90,5 @@
         
         <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="10" Margin="8,0,0,0" VerticalAlignment="Top" Width="458" IsIndeterminate="True"/>
     </Grid>
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="1.0" >
-
-            <shell:ApplicationBarIconButton x:Name="reply" IconUri="/Images/reply.png" Text="回复" Click="reply_click" />
-            <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
-            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
-           
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Text="进入该板块" Click="Enter_Click" />
-               
-            </shell:ApplicationBar.MenuItems>
-
-        </shell:ApplicationBar>
-        </phone:PhoneApplicationPage.ApplicationBar>
 
 </phone:PhoneApplicationPage>
