--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -88,7 +88,7 @@
            </ScrollViewer>
         </Grid>
         
-        <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="11" Margin="0,-32,0,0" VerticalAlignment="Top" Width="480" IsIndeterminate="True"/>
+        <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="11" Margin="-1,0,0,0" VerticalAlignment="Top" Width="480" IsIndeterminate="True" Grid.RowSpan="2"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
