--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -51,7 +51,7 @@
 
             <!--具有文字环绕的双线列表-->
            <!--<ScrollViewer HorizontalAlignment="Left" Name="scrollViewer" Width="480" Margin="0,0,0,0">-->
-            <ListBox x:Name="PostItemsList" HorizontalAlignment="Left" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Width="480" DoubleTap="ItemsControl_DoubleTap_1"  >
+            <ListBox x:Name="PostItemsList" HorizontalAlignment="Left" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Width="480" DoubleTap="ItemsControl_DoubleTap_1" Hold="PostItemsList_Hold"  >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel x:Name="PostPanel" Margin="0,0,-11,0">               
