--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:Bitunion"
+    xmlns:toolkit ="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     mc:Ignorable="d"
     d:DataContext="{d:DesignData SampleData/MainViewModelSampleData.xaml}"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -46,7 +47,7 @@
                 <phone:LongListSelector x:Name="LatestThreadViewList" Margin="0,0,-12,0" ItemsSource="{Binding LatestThreadItems}" SelectionChanged="LongListSelector_SelectionChanged_1">
                     <phone:LongListSelector.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Margin="0,0,0,17" >
+                            <StackPanel Margin="0,0,0,17" toolkit:TiltEffect.IsTiltEnabled="True" >
                                 <TextBlock Text="{Binding Subject}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="30" local:TiltEffect.SuppressTilt="True"/>
                                 <TextBlock Text="{Binding Author}" TextWrapping="Wrap" Margin="12,-6,254,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Left" Width="170"/>
                                 <TextBlock Text="{Binding ForumName}" TextWrapping="Wrap" Margin="254,-26,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Right" Width="170" TextAlignment="Right"/>
