--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -35,7 +35,7 @@
        
         <!--TitlePanel 包含应用程序的名称和页标题-->
 
-        <TextBlock x:Name="ThreadName"   TextWrapping="Wrap" Text="页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称" Margin="0,10,0,0"  FontSize="20" HorizontalAlignment="Right" Width="481" Padding="5,0,10,5" Height="758" VerticalAlignment="Top"/>
+        <TextBlock x:Name="ThreadName"   TextWrapping="Wrap" Text="页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称" Margin="-1,10,0,0"  FontSize="20" HorizontalAlignment="Right" Width="481" Padding="5,0,10,5" Height="58" VerticalAlignment="Top"/>
 
 
         <!--ContentPanel - 在此处放置其他内容-->
@@ -50,14 +50,22 @@
             <ListBox x:Name="PostItemsList" HorizontalAlignment="Left" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.RowSpan="1" Width="480" DoubleTap="ItemsControl_DoubleTap_1" Hold="PostItemsList_Hold"  >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel x:Name="PostPanel" Margin="0,0,-11,0">               
-                           <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="20" Margin="6,15,-3,15"/>
+                        <StackPanel x:Name="PostPanel" Margin="0,0,-11,0" Width="480">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Margin="8,10,0,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Left"  />
+                                <TextBlock Grid.Column="1" Text="{Binding FloorNo}" TextWrapping="Wrap" Margin="0,10,8,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Right" TextAlignment="Right" Foreground="{StaticResource PhoneAccentBrush}"/>
+                            </Grid>
+                          
                             <ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding QuoteItems}" Visibility="{Binding QuoteItems,Converter={StaticResource QuoteConverter}}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Margin="30,0" >
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Margin="0">
                                             <Border BorderThickness="0,0,0,0"  HorizontalAlignment="Left" Background="#FF494747" Margin="0,5,0,0">
-                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="24" Margin="3,0,-3,0" Width="400" Padding="5,0,10,5"/>
+                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="24" Margin="3,0,-3,0" Width="400" Padding="5,5,10,5"/>
                                             </Border>                                        
                                         </StackPanel>
                                     </DataTemplate>
