--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -11,11 +11,12 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True"
+    shell:SystemTray.IsVisible="True" 
+    shell:SystemTray.Opacity="0"
     xmlns:toolkit ="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
-    <Grid x:Name="LayoutRoot">
+    <Grid x:Name="LayoutRoot" Margin="0,0,0,0">
         <Grid.Background>
             <ImageBrush x:Name="BkPic" ImageSource="/Images/loginpage.png"  Opacity ="0.5"/>
         </Grid.Background>
@@ -37,7 +38,7 @@
             <toolkit:ToggleSwitch x:Name="isRemPassword" HorizontalAlignment="Left" Margin="38,183,0,0" VerticalAlignment="Top" Content="开启" IsChecked="true" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked" Width="383" Header="记住密码" />
             <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="38,286,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked" IsChecked="true" Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
         </Grid>
-        <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="12,2,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
+        <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="10,-3,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
         <TextBlock HorizontalAlignment="Left" Margin="28,0,0,73" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="32" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="94" VerticalAlignment="Bottom"/>
 
 
