continue to relize setting page

--- a/Bitunion/BuSettingPage.xaml
+++ b/Bitunion/BuSettingPage.xaml
@@ -26,7 +26,7 @@
                     <toolkit:ToggleSwitch x:Name="tsOutNet" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top"  IsChecked="true" Width="436" Header="网络模式" Content="外网" Unchecked="tsOutNet_Unchecked" Checked="tsOutNet_Checked"/>
                     <toolkit:ToggleSwitch x:Name="tsThreadCount" HorizontalAlignment="Left" Margin="10,242,0,0" VerticalAlignment="Top"  IsChecked="true" Width="436" Header="每一页中的楼层个数" Content="10" Checked="tsThreadCount_Checked" Unchecked="tsThreadCount_Unchecked" />
                     <toolkit:ToggleSwitch x:Name="tsShowTail" HorizontalAlignment="Left" Margin="10,358,0,0" VerticalAlignment="Top"  IsChecked="true" Width="436" Header="显示消息尾巴" Content="显示" Unchecked="tsShowTail_Unchecked" Checked="tsShowTail_Checked"/>
-                    <TextBox x:Name="tbMsgTail" Margin="10,474,10,0" FontSize="24" Text="--测试字体"  TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                    <TextBox x:Name="tbMsgTail" Margin="10,474,10,0" FontSize="24" Text="--测试字体"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="tbMsgTail_TextChanged"/>
                 </Grid>
             </phone:PivotItem>
 
