trim the content and quote, let the App robust

--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -48,7 +48,7 @@
                         <DataTemplate>
                             <StackPanel Margin="0,0,0,20"  toolkit:TiltEffect.IsTiltEnabled="True">
                                 <TextBlock Text="{Binding Author}" TextWrapping="Wrap" Margin="12,0,0,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Left" Width="274" Foreground="{StaticResource PhoneAccentBrush}" />
-                                <TextBlock Text="{Binding Subject}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="28" Margin="12,0,12,5" Height="42" />
+                                <TextBlock Text="{Binding Subject}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="28" Margin="12,0,12,5"  />
                                 <TextBlock Text="{Binding Replies}" TextWrapping="Wrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Left" Width="274" />
                                 <TextBlock Text="{Binding ForumName}" TextWrapping="Wrap" Margin="0,-26,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Right" TextAlignment="Right" Width="170"/>
                             </StackPanel>
