--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -34,7 +34,7 @@
             <PasswordBox x:Name="Password" Margin="39,170,34,0" VerticalAlignment="Top" FontSize="24"/>
             <toolkit:ToggleSwitch x:Name="isRemPassword" HorizontalAlignment="Left" Margin="39,240,0,0" VerticalAlignment="Top" Content="开启" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked" Width="383" Header="记住密码" />
             <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="39,343,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked"  Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
-            <toolkit:ToggleSwitch x:Name="NetWork" HorizontalAlignment="Left" Margin="39,440,0,0" VerticalAlignment="Top"  Width="383" Header="网络模式" Content="外网" Checked="NetWork_Checked" Unchecked="NetWork_Unchecked"/>
+            <toolkit:ToggleSwitch x:Name="tsNetWork" HorizontalAlignment="Left" Margin="39,440,0,0" VerticalAlignment="Top"  Width="383" Header="网络模式" Content="外网" Checked="NetWork_Checked" Unchecked="NetWork_Unchecked"/>
         </Grid>
         <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="10,-3,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
         <TextBlock HorizontalAlignment="Left" Margin="28,0,0,73" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="32" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="94" VerticalAlignment="Bottom"/>
